gl51-master/src/test/deca/context/valid/testObject-extendsSimple.deca
//Description
//Just extends

class B {}
class A extends B {}