gl51-master/src/test/deca/context/invalid/testObject_rule2_6.deca
//Description
//meme method définie deux fois

class A {
    void x(){}
    void x(){}
}
//erreur relevée
